--- a/src/sample/view/menu.fxml
+++ b/src/sample/view/menu.fxml
@@ -7,39 +7,49 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="menuAnchorPane" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #FDFEFE;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.MenuController">
+<AnchorPane fx:id="menuAnchorPane" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #FDFEFE;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.MenuController">
    <children>
       <AnchorPane prefHeight="600.0" prefWidth="100.0" style="-fx-background-color: #2E4053;">
          <children>
-            <Button fx:id="menuStatisticsButton" layoutX="2.0" layoutY="305.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="102.0" text="?" />
-            <ImageView fx:id="menuToDoButton" fitHeight="106.0" fitWidth="102.0" layoutY="101.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/icons8-list-64.png" />
-               </image>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <AnchorPane layoutX="-3.0" prefHeight="96.0" prefWidth="108.0" style="-fx-background-color: #E74C3C #E74C3C;">
-               <children>
-                  <ImageView fx:id="menuHomeButton" fitHeight="87.0" fitWidth="102.0" layoutX="11.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+            <Button fx:id="menuToDoButton" layoutY="110.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0" text=" ">
+               <graphic>
+                  <ImageView fitHeight="69.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../assets/icons8-brain-100.png" />
+                        <Image url="@../assets/icons8-list-64.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="menuPomodoroButton" layoutY="220.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0">
+               <graphic>
+                  <ImageView accessibleRole="BUTTON" fitHeight="81.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icons8-timer-50.png" />
                      </image>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-               </children>
-            </AnchorPane>
-            <ImageView fx:id="menuPomodoroButton" fitHeight="102.0" fitWidth="102.0" layoutX="2.0" layoutY="203.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/icons8-timer-50.png" />
-               </image>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="menuInfoButton" layoutY="330.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0">
+               <graphic>
+                  <ImageView accessibleRole="BUTTON" fitHeight="87.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icons8-info-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="menuHomeButton" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0" style="-fx-background-color: #E74C3C #E74C3C;">
+               <graphic>
+                  <ImageView accessibleRole="BUTTON" fitHeight="87.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icons8-brain-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
 
          </children>
       </AnchorPane>
