--- a/src/sample/view/toDoList.fxml
+++ b/src/sample/view/toDoList.fxml
@@ -7,42 +7,52 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane fx:id="toDoListAnchorPane" accessibleRole="TAB_PANE" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ToDoListController">
+<AnchorPane fx:id="toDoListAnchorPane" accessibleRole="TAB_PANE" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ToDoListController">
    <children>
-      <Button fx:id="addButton" layoutX="462.0" layoutY="530.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="98.0" text="ADD TASK" />
-      <ListView fx:id="toDoListListView" layoutX="101.0" prefHeight="530.0" prefWidth="798.0" />
-      <AnchorPane prefHeight="600.0" prefWidth="100.0" style="-fx-background-color: #2E4053;">
+      <ListView fx:id="toDoListListView" layoutX="115.0" prefHeight="526.0" prefWidth="789.0" />
+      <AnchorPane prefHeight="600.0" prefWidth="113.0" style="-fx-background-color: #2E4053;">
          <children>
-            <Button fx:id="menuStatisticsButton" layoutX="3.0" layoutY="309.0" mnemonicParsing="false" prefHeight="96.0" prefWidth="102.0" text="?" />
-            <ImageView fx:id="menuToDoButton" fitHeight="106.0" fitWidth="102.0" layoutX="3.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/icons8-list-64.png" />
-               </image>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
-            <AnchorPane prefHeight="96.0" prefWidth="108.0" style="-fx-background-color: #E74C3C #E74C3C;">
-               <children>
-                  <ImageView fx:id="menuHomeButton" fitHeight="87.0" fitWidth="102.0" layoutX="11.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+            <Button fx:id="menuToDoButton" layoutX="2.0" layoutY="110.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0" text=" ">
+               <graphic>
+                  <ImageView fitHeight="69.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../assets/icons8-brain-100.png" />
+                        <Image url="@../assets/icons8-list-64.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="menuPomodoroButton" layoutX="2.0" layoutY="220.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0">
+               <graphic>
+                  <ImageView accessibleRole="BUTTON" fitHeight="81.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icons8-timer-50.png" />
                      </image>
                      <cursor>
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </ImageView>
-               </children>
-            </AnchorPane>
-            <ImageView fx:id="menuPomodoroButton" fitHeight="102.0" fitWidth="102.0" layoutX="3.0" layoutY="207.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../assets/icons8-timer-50.png" />
-               </image>
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
-            </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="menuInfoButton" layoutX="2.0" layoutY="330.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0">
+               <graphic>
+                  <ImageView accessibleRole="BUTTON" fitHeight="87.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icons8-info-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Button fx:id="menuHomeButton" layoutX="2.0" mnemonicParsing="false" prefHeight="110.0" prefWidth="110.0" style="-fx-background-color: #E74C3C #E74C3C;">
+               <graphic>
+                  <ImageView accessibleRole="BUTTON" fitHeight="87.0" fitWidth="87.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../assets/icons8-brain-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
          </children>
       </AnchorPane>
+      <Button fx:id="addButton" layoutX="452.0" layoutY="534.0" mnemonicParsing="false" prefHeight="52.0" prefWidth="98.0" text="ADD TASK" />
    </children>
 </AnchorPane>
