--- a/src/sample/view/signUp.fxml
+++ b/src/sample/view/signUp.fxml
@@ -13,7 +13,7 @@
    <children>
       <AnchorPane prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #2E4053;">
          <children>
-            <TextField fx:id="signUpUsername" layoutX="70.0" layoutY="291.0" prefHeight="40.0" prefWidth="260.0" promptText="Username" style="-fx-background-radius: 20; -fx-blend-mode: 10;" AnchorPane.bottomAnchor="169.0" />
+            <TextField fx:id="signUpUsername" layoutX="70.0" layoutY="291.0" prefHeight="40.0" prefWidth="260.0" promptText="Username" style="-fx-background-radius: 20;" AnchorPane.bottomAnchor="169.0" />
             <TextField fx:id="signUpLastName" layoutX="70.0" layoutY="171.0" prefHeight="40.0" prefWidth="260.0" promptText="Last name" style="-fx-background-radius: 20;" />
             <TextField fx:id="signUpFirstName" layoutX="70.0" layoutY="115.0" prefHeight="40.0" prefWidth="260.0" promptText="First name" style="-fx-background-radius: 20;" />
             <Button fx:id="signUpButton" layoutX="151.0" layoutY="365.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="98.0" style="-fx-background-color: #E74C3C;" text="SIGN UP" />
