--- a/src/sample/view/clock.fxml
+++ b/src/sample/view/clock.fxml
@@ -2,15 +2,16 @@
 
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="clockAnchorPane" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ClockController">
+<AnchorPane fx:id="clockAnchorPane" minHeight="600.0" minWidth="900.0" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ClockController">
    <children>
-      <ImageView fx:id="clockPlayButton" fitHeight="150.0" fitWidth="209.0" layoutX="199.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="clockPlayButton" fitHeight="217.0" fitWidth="329.0" layoutX="81.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/play-button.png" />
          </image>
@@ -18,22 +19,17 @@
             <Rectangle2D />
          </viewport>
       </ImageView>
-      <ImageView fx:id="clockPauseButton" fitHeight="150.0" fitWidth="200.0" layoutX="539.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/pause.png" />
-         </image>
-      </ImageView>
-      <ImageView fx:id="clockStopButton" fitHeight="150.0" fitWidth="200.0" layoutX="724.0" layoutY="231.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="clockStopButton" fitHeight="217.0" fitWidth="217.0" layoutX="609.0" layoutY="291.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/stop.png" />
          </image>
       </ImageView>
-      <TextField fx:id="clockDisplay" editable="false" layoutX="381.0" layoutY="100.0" prefHeight="65.0" prefWidth="173.0">
+      <TextField fx:id="clockDisplay" alignment="CENTER" editable="false" layoutX="260.0" layoutY="146.0" prefHeight="65.0" prefWidth="130.0">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
       </TextField>
-      <AnchorPane layoutX="614.0" layoutY="26.0" prefHeight="106.0" prefWidth="222.0">
+      <AnchorPane layoutX="622.0" layoutY="126.0" prefHeight="106.0" prefWidth="222.0">
          <children>
             <Button fx:id="setMinutyButton" layoutX="14.0" layoutY="21.0" mnemonicParsing="false" text="Ustaw" />
             <Button fx:id="setPrzerwaButton" layoutX="14.0" layoutY="71.0" mnemonicParsing="false" text="Ustaw" />
@@ -41,12 +37,12 @@
             <TextField fx:id="setPrzerwaTx" layoutX="73.0" layoutY="71.0" promptText="Czas przerwy (min)" />
          </children>
       </AnchorPane>
-      <TextField fx:id="clockTitle" editable="false" layoutX="381.0" layoutY="26.0" prefHeight="65.0" prefWidth="173.0" text="Skup się!">
+      <TextField fx:id="clockTitle" alignment="CENTER" editable="false" layoutX="199.0" layoutY="60.0" prefHeight="65.0" prefWidth="251.0" text="Skup się!">
          <font>
             <Font name="System Bold" size="30.0" />
          </font>
       </TextField>
-      <ImageView fx:id="clockPlayButton1" fitHeight="150.0" fitWidth="209.0" layoutX="375.0" layoutY="231.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="clockPlayButton1" fitHeight="217.0" fitWidth="329.0" layoutX="342.0" layoutY="291.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assets/play-button.png" />
          </image>
@@ -54,5 +50,20 @@
             <Rectangle2D />
          </viewport>
       </ImageView>
+      <Label fx:id="skupienieTx" alignment="CENTER" layoutX="160.0" layoutY="518.0" text="Skupienie" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="HP Simplified Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label fx:id="przerwaTx" alignment="CENTER" layoutX="426.0" layoutY="518.0" text="Przerwa" textAlignment="CENTER" textFill="WHITE">
+         <font>
+            <Font name="HP Simplified Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="goToMenuButton" layoutX="664.0" layoutY="41.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="149.0" style="-fx-background-color: #E74C3C;" text="Menu" textFill="#2e4053">
+         <font>
+            <Font name="HP Simplified Bold" size="36.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
