--- a/src/sample/view/addForm.fxml
+++ b/src/sample/view/addForm.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.AddFormController">
+<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.AddFormController">
    <children>
       <TextField fx:id="addFormTaskfield" layoutX="190.0" layoutY="112.0" prefHeight="47.0" prefWidth="321.0" promptText="Task" />
       <TextField fx:id="addFormDescrytpionField" layoutX="188.0" layoutY="187.0" prefHeight="92.0" prefWidth="328.0" promptText="Description" />
@@ -17,5 +20,17 @@
             <Font size="36.0" />
          </font>
       </Label>
+      <JFXButton fx:id="closeButton" cancelButton="true" ellipsisString="" layoutX="643.0" layoutY="3.0" onAction="#closeButtonAction" prefHeight="49.0" prefWidth="51.0" textFill="WHITE">
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/icons8-delete-100 (3).png" />
+               </image>
+            </ImageView>
+         </graphic>
+         <font>
+            <Font size="1.0" />
+         </font>
+      </JFXButton>
    </children>
 </AnchorPane>
