--- a/src/sample/view/clock.fxml
+++ b/src/sample/view/clock.fxml
@@ -1,71 +1,105 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Rectangle2D?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="clockAnchorPane" minHeight="600.0" minWidth="483.0" prefHeight="600.0" prefWidth="483.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ClockController">
+
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="272.0" prefWidth="797.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controller.ClockController">
    <children>
-      <ImageView fx:id="clockPlayButton" fitHeight="118.0" fitWidth="118.0" layoutX="14.0" layoutY="400.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/play-button.png" />
-         </image>
-         <viewport>
-            <Rectangle2D />
-         </viewport>
-      </ImageView>
-      <ImageView fx:id="clockStopButton" fitHeight="125.0" fitWidth="118.0" layoutX="184.0" layoutY="400.0" nodeOrientation="RIGHT_TO_LEFT" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/stop.png" />
-         </image>
-      </ImageView>
-      <TextField fx:id="clockDisplay" alignment="CENTER" editable="false" layoutX="96.0" layoutY="215.0" prefHeight="146.0" prefWidth="295.0">
-         <font>
-            <Font name="System Bold" size="68.0" />
-         </font>
-      </TextField>
-      <AnchorPane layoutX="622.0" layoutY="126.0" prefHeight="106.0" prefWidth="222.0" />
-      <TextField fx:id="clockTitle" alignment="CENTER" editable="false" layoutX="117.0" layoutY="14.0" prefHeight="65.0" prefWidth="251.0" text="Skup się!">
-         <font>
-            <Font name="System Bold" size="30.0" />
-         </font>
-      </TextField>
-      <ImageView fx:id="clockPlayButton1" fitHeight="118.0" fitWidth="118.0" layoutX="356.0" layoutY="400.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../assets/play-button.png" />
-         </image>
-         <viewport>
-            <Rectangle2D />
-         </viewport>
-      </ImageView>
-      <Label fx:id="skupienieTx" alignment="CENTER" layoutX="43.0" layoutY="538.0" text="Skupienie" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="HP Simplified Bold" size="14.0" />
-         </font>
-      </Label>
-      <Label fx:id="przerwaTx" alignment="CENTER" layoutX="390.0" layoutY="538.0" text="Przerwa" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="HP Simplified Bold" size="14.0" />
-         </font>
-      </Label>
-      <Button fx:id="goToMenuButton" layoutX="376.0" layoutY="14.0" mnemonicParsing="false" prefHeight="65.0" prefWidth="98.0" style="-fx-background-color: #E74C3C;" text="Menu" textFill="#2e4053">
-         <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Label fx:id="skupienieTx1" alignment="CENTER" layoutX="227.0" layoutY="538.0" text="Stop" textAlignment="CENTER" textFill="WHITE">
-         <font>
-            <Font name="HP Simplified Bold" size="14.0" />
-         </font>
-      </Label>
-      <TextField fx:id="setPrzerwaTx" layoutX="83.0" layoutY="164.0" prefHeight="31.0" prefWidth="149.0" promptText="Czas przerwy (min)" />
-      <Button fx:id="setPrzerwaButton" layoutX="13.0" layoutY="164.0" mnemonicParsing="false" text="Ustaw" />
-      <Button fx:id="setMinutyButton" layoutX="13.0" layoutY="117.0" mnemonicParsing="false" text="Ustaw" />
-      <TextField fx:id="setMinutyTx" layoutX="83.0" layoutY="117.0" prefHeight="31.0" prefWidth="149.0" promptText="Czas skupienia (min)" />
+      <GridPane layoutX="270.0" layoutY="81.0" prefHeight="272.0" prefWidth="797.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints maxHeight="218.0" minHeight="10.0" prefHeight="204.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="130.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <GridPane prefHeight="190.0" prefWidth="797.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <AnchorPane prefHeight="204.0" prefWidth="325.0" style="-fx-background-color: #A0A0A0;">
+                     <children>
+                        <AnchorPane layoutX="83.0" layoutY="26.0" prefHeight="153.0" prefWidth="234.0" style="-fx-background-color: #888888;">
+                           <children>
+                              <Text fx:id="clockMinutes" layoutX="62.0" layoutY="116.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00" wrappingWidth="110.6708984375" AnchorPane.bottomAnchor="12.90625" AnchorPane.leftAnchor="62.0" AnchorPane.rightAnchor="61.3291015625" AnchorPane.topAnchor="12.40625">
+                                 <font>
+                                    <Font size="96.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </AnchorPane>
+                     </children>
+                  </AnchorPane>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #A0A0A0;" GridPane.columnIndex="1">
+                     <children>
+                        <AnchorPane layoutX="88.0" layoutY="25.0" prefHeight="150.0" prefWidth="230.0" style="-fx-background-color: #888888;">
+                           <children>
+                              <Text fx:id="clockSeconds" layoutX="62.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00" wrappingWidth="110.6708984375" AnchorPane.bottomAnchor="12.90625" AnchorPane.leftAnchor="62.0" AnchorPane.rightAnchor="61.3291015625" AnchorPane.topAnchor="12.40625">
+                                 <font>
+                                    <Font size="96.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </AnchorPane>
+                        <JFXButton fx:id="clockExitButton" buttonType="RAISED" cancelButton="true" ellipsisString="" layoutX="341.0" layoutY="-1.0" onAction="#clockExitButtonAction" prefHeight="50.0" prefWidth="57.0" style="-fx-background-color: #2E4053;">
+                           <font>
+                              <Font size="1.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="50.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../assets/out.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </JFXButton>
+                     </children>
+                  </AnchorPane>
+               </children>
+            </GridPane>
+            <GridPane style="-fx-background-color: #2E4053;" GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <JFXButton fx:id="clockWorkButton" alignment="CENTER" buttonType="RAISED" prefHeight="50.0" prefWidth="120.0" style="-fx-background-color: #E74C3C;" text="work">
+                     <GridPane.margin>
+                        <Insets left="70.0" />
+                     </GridPane.margin>
+                  </JFXButton>
+                  <JFXButton fx:id="cloclPauseButton" buttonType="RAISED" prefHeight="50.0" prefWidth="120.0" style="-fx-background-color: #E74C3C;" text="pause" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="70.0" />
+                     </GridPane.margin>
+                  </JFXButton>
+                  <JFXButton fx:id="clockBreakButton" buttonType="RAISED" prefHeight="50.0" prefWidth="120.0" style="-fx-background-color: #E74C3C;" text="break" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="70.0" right="50.0" />
+                     </GridPane.margin>
+                  </JFXButton>
+               </children>
+            </GridPane>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
