--- a/src/sample/view/login.fxml
+++ b/src/sample/view/login.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -26,13 +27,23 @@
             <Label layoutX="94.0" layoutY="117.0" prefHeight="88.0" prefWidth="244.0" text="Witaj w aplikacji, która uczyni Cię nieco bardziej produktywnym............................... albo przynajmniej spróbuje" textAlignment="CENTER" textFill="#f0efef" wrapText="true" />
          </children>
       </AnchorPane>
-      <TextField fx:id="loginUsernameField" layoutX="486.0" layoutY="138.0" prefHeight="40.0" prefWidth="250.0" style="-fx-background-radius: 20;" />
-      <PasswordField fx:id="loginPasswordField" layoutX="486.0" layoutY="191.0" prefHeight="40.0" prefWidth="250.0" style="-fx-background-radius: 20;" />
-      <Button fx:id="loginSignInButton" layoutX="562.0" layoutY="274.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="98.0" style="-fx-background-color: #E74C3C;" text="SIGN IN" />
-      <Button fx:id="loginSignUpButton" layoutX="708.0" layoutY="14.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="77.0" style="-fx-background-color: #E74C3C;" text="SIGN UP">
+      <Button fx:id="loginSignInButton" layoutX="533.0" layoutY="274.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #E74C3C;" text="SIGN IN" AnchorPane.rightAnchor="117.0" />
+      <Button fx:id="loginSignUpButton" layoutX="536.0" layoutY="324.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" style="-fx-background-color: #E74C3C;" text="SIGN UP" AnchorPane.rightAnchor="117.0" />
+      <JFXButton fx:id="closeButton" cancelButton="true" ellipsisString="" layoutX="726.0" layoutY="14.0" onAction="#closeButtonAction" prefHeight="40.0" prefWidth="40.0">
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/out.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <Label fx:id="loginErrorLabel" layoutX="456.0" layoutY="57.0" prefHeight="59.0" prefWidth="338.0" text="WRONG USERNAME OR PASSWORD. TRY AGAIN" textFill="#ee0808" visible="false">
          <font>
-            <Font size="10.0" />
+            <Font size="14.0" />
          </font>
-      </Button>
+      </Label>
+      <JFXTextField fx:id="loginUsernameField" focusColor="WHITE" layoutX="488.0" layoutY="126.0" prefHeight="40.0" prefWidth="244.0" promptText="Username" style="-fx-text-fill: #ffff;" unFocusColor="WHITE" AnchorPane.rightAnchor="68.0" />
+      <JFXPasswordField fx:id="loginPasswordField" focusColor="WHITE" layoutX="488.0" layoutY="186.0" prefHeight="40.0" prefWidth="244.0" promptText="Password" style="-fx-text-fill: #ffff;" unFocusColor="WHITE" />
    </children>
 </AnchorPane>
