--- a/src/sample/view/rowCell.fxml
+++ b/src/sample/view/rowCell.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rowCellAnchorPane" prefHeight="100.0" prefWidth="729.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="rowCellAnchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="850.0" style="-fx-background-color: #2E4053;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="rowCellImageView" fitHeight="54.0" fitWidth="57.0" layoutX="38.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -19,7 +19,7 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="rowCellDescriptionLabel" layoutX="119.0" layoutY="41.0" prefHeight="54.0" prefWidth="634.0" style="-fx-background-color: #E74C3C;" text="Description" textFill="#fafafa" />
-      <CheckBox fx:id="checkBox" layoutX="720.0" layoutY="9.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="18.0" AnchorPane.bottomAnchor="63.8" AnchorPane.leftAnchor="720.0" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="9.0" />
+      <Label fx:id="rowCellDescriptionLabel" layoutX="119.0" layoutY="41.0" prefHeight="54.0" prefWidth="722.0" style="-fx-background-color: #E74C3C;" text="Description" textFill="#fafafa" />
+      <CheckBox fx:id="checkBox" layoutX="813.0" layoutY="6.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="0.0" />
    </children>
 </AnchorPane>
