--- a/src/sample/view/signUp.fxml
+++ b/src/sample/view/signUp.fxml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXPasswordField?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -13,17 +14,17 @@
    <children>
       <AnchorPane prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: #2E4053;">
          <children>
-            <TextField fx:id="signUpUsername" layoutX="70.0" layoutY="291.0" prefHeight="40.0" prefWidth="260.0" promptText="Username" style="-fx-background-radius: 20;" AnchorPane.bottomAnchor="169.0" />
-            <TextField fx:id="signUpLastName" layoutX="70.0" layoutY="171.0" prefHeight="40.0" prefWidth="260.0" promptText="Last name" style="-fx-background-radius: 20;" />
-            <TextField fx:id="signUpFirstName" layoutX="70.0" layoutY="115.0" prefHeight="40.0" prefWidth="260.0" promptText="First name" style="-fx-background-radius: 20;" />
-            <Button fx:id="signUpButton" layoutX="151.0" layoutY="365.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="98.0" style="-fx-background-color: #E74C3C;" text="SIGN UP" />
-            <PasswordField fx:id="signUpPassword" layoutX="70.0" layoutY="230.0" prefHeight="40.0" prefWidth="260.0" promptText="Password" style="-fx-background-radius: 20;" />
+            <Button fx:id="signUpButton" layoutX="151.0" layoutY="384.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="98.0" style="-fx-background-color: #E74C3C;" text="SIGN UP" />
             <Button fx:id="signUpBackButton" layoutX="330.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="58.0" style="-fx-background-color: #E74C3C;" text="SIGN IN">
                <font>
                   <Font size="10.0" />
                </font>
             </Button>
             <Label fx:id="wrongUsernameLabel" layoutX="25.0" layoutY="82.0" prefHeight="18.0" prefWidth="356.0" text="This username is already in use. Please try another" textFill="RED" visible="false" />
+            <JFXTextField fx:id="signUpFirstName" focusColor="WHITE" labelFloat="true" layoutX="72.0" layoutY="118.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="250.0" promptText="Name" style="-fx-text-fill: #ffff;" unFocusColor="WHITE" AnchorPane.bottomAnchor="370.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="80.0" AnchorPane.topAnchor="120.0" />
+            <JFXTextField fx:id="signUpLastName" focusColor="WHITE" labelFloat="true" layoutX="74.0" layoutY="175.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="250.0" promptText="Surname" style="-fx-text-fill: #ffff;" unFocusColor="WHITE" AnchorPane.bottomAnchor="310.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="80.0" />
+            <JFXTextField fx:id="signUpUsername" focusColor="WHITE" labelFloat="true" layoutX="72.0" layoutY="250.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="30.0" prefWidth="250.0" promptText="Username" style="-fx-text-fill: #ffff;" unFocusColor="WHITE" AnchorPane.bottomAnchor="250.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="80.0" />
+            <JFXPasswordField fx:id="signUpPassword" focusColor="WHITE" labelFloat="true" layoutX="70.0" layoutY="312.0" prefHeight="31.0" prefWidth="250.0" promptText="Password" style="-fx-text-fill: #ffff;" unFocusColor="WHITE" AnchorPane.bottomAnchor="190.0" />
          </children>
       </AnchorPane>
       <Label alignment="CENTER" contentDisplay="CENTER" layoutX="538.0" layoutY="27.0" text="FOCUS" textFill="WHITE">
@@ -37,5 +38,14 @@
             <Image url="@../assets/icons8-brain-100.png" />
          </image>
       </ImageView>
+      <JFXButton fx:id="closeButton" cancelButton="true" ellipsisString="" layoutX="736.0" layoutY="2.0" onAction="#closeButtonAction" prefHeight="49.0" prefWidth="51.0" textFill="WHITE">
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/icons8-delete-100 (3).png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
    </children>
 </AnchorPane>
